# postcode-db-generator

./: .gitignore  Cargo.toml  Notes.md  README.md
src/: batch_insert.rs  main.rs
src/entities/: mod.rs  node.rs  prelude.rs
src/migrator/: m20231101_000000_create_nodes_table.rs  mod.rs
