[package]
name = "postcode-db-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.4.7"
futures = "0.3.29"
indicatif = "0.17.7"
sea-orm = { version = "0.12.4", features = ["sqlx-all", "runtime-async-std-native-tls", "macros"] }
sea-orm-migration = "0.12.4"
xml = "0.8.10"
chrono = "0.4.31"
regex = "1.10.2"
osmpbf = "0.3.3"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
log = "0.4.20"
